Update styles to fix edge spacing

--- a/resources/assets/sass/components/_base.scss
+++ b/resources/assets/sass/components/_base.scss
@@ -49,8 +49,14 @@ input[type="text"], input[type="email"], input[type="password"] {
   margin-bottom: 1em;
 }
 
+.container {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
 .site-header {
-  padding: 30px 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
 
   a {
     color: $cardinal;
