--- a/resources/assets/sass/components/_landing.scss
+++ b/resources/assets/sass/components/_landing.scss
@@ -17,7 +17,7 @@
   }
   
   .hero__information {
-    padding: 30px 0;
+    padding: 30px;
     color: $white;
     border-top: 3px dotted $white;
     background: linear-gradient( rgba(0,0,0,0), rgba(0,0,0,1) 75%);
